更新主题,并测试.gitignore

--- a/_includes/default_index.html
+++ b/_includes/default_index.html
@@ -1,3 +1,4 @@
+<p>default_index.html</p>
 <ul class="post-list">
     {% for post in site.posts %}
         <a href="{{site.baseurl}}{{post.url}}"> {{ post.title }}  </a>
