--- a/_includes/kunka_index.html
+++ b/_includes/kunka_index.html
@@ -1,3 +1,4 @@
+<p>kunka_index.html</p>
 {% for post in paginator.posts %}
     <div class="article">
         <h3 class="title"><a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h3>
