--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　	<title>{{ page.title }}</title>
-    </head>
-
-    <body>
-	<header>
-	</header>
-
-	<aside>
-	</aside>
-
-	<article>{{ content }}</article>
-
-	<footer>
-	</footer>
-    </body>
-
-</html>
-
+{% include {{site.theme}}.html %}
