--- a/_includes/jmq.html
+++ b/_includes/jmq.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="{{site.baseurl}}/themes/{{site.theme}}/stylesheets/pygment_trac.css">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <script src="http://lib.sinaapp.com/js/jquery/1.7/jquery.min.js"></script>
-    <script src="{{site.baseurl}}/themes/{{site.theme}}/javascripts/main.js"></script>
+    <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/1.7/jquery.min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/themes/{{site.theme}}/javascripts/main.js"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
