--- a/_includes/jmq.html
+++ b/_includes/jmq.html
@@ -92,7 +92,7 @@
 						<h4 class="title">Links</h4>
 						<ul class="list">
 							{% for i in site.customLinks %}
-								{% if i.message == "Friends" %}
+								{% if i.message == "Big Fishes" %}
 									{% for link in i.item %}
 									<li><a href="{{ link.url }}" title="{{ link.text }}" target="_blank">{{ link.text }}</a></li>
 									{% endfor %}
