--- a/_includes/jmq.html
+++ b/_includes/jmq.html
@@ -10,7 +10,14 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <script type="text/javascript" src="{{site.baseurl}}/themes/{{site.theme}}/javascripts/jquery.min.js"></script>
     <script type="text/javascript" src="{{site.baseurl}}/themes/{{site.theme}}/javascripts/main.js"></script>
-    <!--[if lt IE 9]>
+	<!--数学公式用mathjax编辑-->
+	<script type="text/x-mathjax-config">
+	MathJax.Hub.Config({
+		tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+	});
+	</script>
+	<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+	<!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
