--- a/_includes/cool.html
+++ b/_includes/cool.html
@@ -170,9 +170,9 @@
           		
         		</div>
         	{% else %}
- 					{% if page.sidePart == 'none' %}
- 						{{ content }}
- 					{% else %}
+				{% if page.sidePart == 'none' %}
+					{{ content }}
+				{% else %}
 					
 					<div class="index-part">
 						<nav id="navleft">
@@ -201,14 +201,17 @@
 						<p class="copyright">
     						本文的版权归作者 <a href="mailto:{{ site.author.email }}">{{ site.author.name }}</a> 所有，采用 <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution-NonCommercial 3.0 License</a>。任何人可以进行转载、分享，但不可在未经允许的情况下用于商业用途；转载请注明出处。感谢配合！
   						</p>
-
-  						{% if page.comments %}
-    						{% include duoshuo.html %}
-  						{% endif %}
-
 					</div>
+					
+					
+  						
         			</div>
-        			{% endif %}
+				{% endif %}
+				<div text-align: center>
+        		{% if page.comments %}
+    				{% include duoshuo.html %}
+  				{% endif %}
+  				</div>
         	{% endif %}
       </div>
     </div>
