--- a/_includes/cool.html
+++ b/_includes/cool.html
@@ -207,7 +207,7 @@
   						
         			</div>
 				{% endif %}
-				<div text-align: center>
+				<div class="comment">
         		{% if page.comments %}
     				{% include duoshuo.html %}
   				{% endif %}
