--- a/_includes/cool.html
+++ b/_includes/cool.html
@@ -22,7 +22,7 @@
     	<link rel="stylesheet" href="/themes/{{site.theme}}/css/duoshuo.css">
     	<!-- endbuild -->
 
-		<!-- CNZZ Analysis -->
+		<!-- Cnzz Analysis -->
 		<script type="text/javascript">
 			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 			document.write(unescape("%3Cspan id='cnzz_stat_icon_1256284061'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256284061' type='text/javascript'%3E%3C/script%3E"));
