--- a/_includes/cool_index.html
+++ b/_includes/cool_index.html
@@ -3,8 +3,7 @@
     {% for post in paginator.posts %}
       <li>
         <a class="post-link" href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a>
-        <p class="post-date">Posted on {{ post.date | date: "%b %-d, %Y" }} ;
-            浏览量: <span class="visit-count" data-link="{{ site.baseurl }}{{ post.url }}">0</span>次
+        <p class="post-date">Posted on {{ post.date | date: "%b %-d, %Y" }} | 
         	{% for label in post.category %}
         		<a href="{{ site.baseurl }}/navigations/archives.html/?label={{ label }}"><span class="post-label">{{ label }}</span></a>
         	{% endfor %}
@@ -41,16 +40,4 @@
   {% endif %}
 </div>
 
-<script>
-    jsonp('http://analytics1.sinaapp.com/page.php', {
-        callback: 'getCallback',
-        type: 'getByDomain',
-        domain: 'http://www.haojunyu.link'
-    });
 
-    function getCallback(result) {
-        for (var i = 0; i < result.length; i++) {
-            $('.visit-count[data-link="'+ result[i].url +'"]').html(result[i].count);
-        }
-    }
-</script>
