--- a/_includes/cool.html
+++ b/_includes/cool.html
@@ -217,7 +217,7 @@
 								</span>次 <span class="pause"> | 
         						{% if page.category %}
             					{% for label in page.category %}
-               			 		<a class="label" href="{{ site.baseurl }}/navigations/archives/?label={{ label }}">{{ label }}</a>
+               			 		<a class="label" href="{{ site.baseurl }}/navigations/archives.html/?label={{ label }}">{{ label }}</a>
             					{% endfor %}
         						{% endif %}
     						</p>
