--- a/_includes/cool.html
+++ b/_includes/cool.html
@@ -31,8 +31,8 @@
 			ga('create', 'UA-67273073-1', 'auto');
 			ga('send', 'pageview');
 		</script>
-		
-		<!-- Cnzz Analysis 
+
+		<!-- Cnzz Analysis
 		<script type="text/javascript">
 			var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 			document.write(unescape("%3Cspan id='cnzz_stat_icon_1256284061'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256284061' type='text/javascript'%3E%3C/script%3E"));
@@ -44,12 +44,12 @@
 				(function() {
 					var hm = document.createElement("script");
 					hm.src = "//hm.baidu.com/hm.js?7e4d2ceadae9d07003cf8a93e067b798";
-					var s = document.getElementsByTagName("script")[0]; 
+					var s = document.getElementsByTagName("script")[0];
 					s.parentNode.insertBefore(hm, s);
 				})();
 			}
 		</script>
-		
+
 		<!-- 统计页面访问 不蒜子-->
 		<script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 
@@ -57,7 +57,7 @@
     	<script type="text/javascript" src="/themes/cool/js/lib/jquery/jquery.min.js"></script>
 
     	<!-- help function for jsonp -->
-    	<script>    	
+    	<script>
         var jsonp = function(url, args) {
             var head = document.getElementsByTagName('head')[0],
                     script = document.createElement("script"),
@@ -75,7 +75,7 @@
             head.appendChild(script);
         }
     	</script>
-    	
+
     	<!-- index -->
     	<script type="text/javascript" >
     		$(document).ready(function(){
@@ -85,22 +85,22 @@
     				$("#navleft ul li:first-child a").parent().addClass("active");
     			});
   			});
-  			
+
   			$("#navleft ul li a").live("click",function(event) {
     			$("body").animate({scrollTop:$($(this).attr("href")).offset().top-190},400);
     			$("#navleft ul li a").parent().removeClass("active");
     			$(this).parent().addClass("active");
-    			event.preventDefault();    
+    			event.preventDefault();
   			});
     	</script>
-    	
+
     	<!--数学公式用mathjax编辑-->
 		<script type="text/x-mathjax-config">
 			MathJax.Hub.Config({
 				tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
 			});
 		</script>
-		<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+		<script type="text/javascript" src="http://mathjax.josephjctang.com/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 	</head>
 
 
@@ -137,10 +137,10 @@
         			<img class="avatar" src="{{site.author.imageLink}}"/>
         			昵称: {{site.author.nickname}} </br>
         			口号: {{site.author.simpleIntro}} </br>
-        			邮箱: <a href="{{site.author.email}}">{{site.author.email}}</a> 
+        			邮箱: <a href="{{site.author.email}}">{{site.author.email}}</a>
         			<span id="busuanzi_container_site_pv">
 						本站访客数：  <span id="busuanzi_value_site_uv"></span>  人次 </br>
-						本站访问量：  <span id="busuanzi_value_site_pv"></span>  次						
+						本站访问量：  <span id="busuanzi_value_site_pv"></span>  次
 					</span>
     				</p>
 					</div>
@@ -149,7 +149,7 @@
 					<div class="recent-posts">
     					<h4>最近博文</h4>
     					<hr/>
-    				
+
     					<ul class="list">
 							{% for rpost in site.posts limit:10  %}
 								<li><a href="{{ site.baseurl }}{{ rpost.url }}" title="{{ rpost.title }}" rel="bookmark">{{ rpost.title }}</a></li>
@@ -171,13 +171,13 @@
 								ds.type = 'text/javascript';ds.async = true;
 								ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
 								ds.charset = 'UTF-8';
-								(document.getElementsByTagName('head')[0] 
+								(document.getElementsByTagName('head')[0]
 		 							|| document.getElementsByTagName('body')[0]).appendChild(ds);
 								})();
 						</script>
 						<!-- 多说公共JS代码 end -->
 					</div>
-					
+
 					<!-- 休闲喂鱼 -->
 					<div>
     					<h4>有空帮我喂下鱼</h4>
@@ -185,36 +185,36 @@
 						<p>
 							<embed width="240" height="300" flashvars="up_numFish=6&amp;up_fishColor4=#FFFFFF&amp;up_backgroundColor=F6F6F6&amp;up_fishColor1=F4A61C&amp;up_fishColor7=F45540&amp;up_fishColor6=F45540&amp;up_fishColor8=F45540&amp;up_fishColor2=C4C4C4&amp;up_fishColor9=F45540&amp;up_fishColor3=#600000&amp;up_fishName=Fish&amp;up_fishColor5=F45540&amp;up_fishColor10=F45540&amp;up_backgroundImage=http://&amp;up_foodColor=FCB347&amp;" bgcolor="F6F6F6" wmode="opaque" src="http://7vzrrd.com1.z0.glb.clouddn.com/xshell.net.swf" type="application/x-shockwave-flash">
 						</p>
-    					
+
 					</div>
-					        		
-          		
+
+
         		</div>
         	{% else %}
 				{% if page.sidePart == 'none' %}
 					{{ content }}
-					
+
 					<div class="comment">
 						{% if page.comments %}
 							{% include duoshuo.html %}
 						{% endif %}
 					</div>
 				{% else %}
-					
+
 					<div class="index-part">
 						<nav id="navleft">
 							<ul></ul>
 						</nav>
 					</div>
-  		
-        			<div id="contents" class="central-right">  		
+
+        			<div id="contents" class="central-right">
         			<div class="post">
 						<header class="post-header">
     						<h1>{{ page.title }}</h1>
     						<p class="meta">{{ page.date | date: "%b %-d, %Y" }} <span class="pause"> - </span>
 								<span id="busuanzi_container_page_pv">
 								浏览量:	<span id="busuanzi_value_page_pv"></span>
-								</span>次 <span class="pause"> | 
+								</span>次 <span class="pause"> |
         						{% if page.category %}
             					{% for label in page.category %}
                			 		<a class="label" href="{{ site.baseurl }}/navigations/archives.html/?label={{ label }}">{{ label }}</a>
@@ -226,11 +226,11 @@
   						<article class="post-content">
   							{{ content }}
   						</article>
-					
+
 						<p class="copyright">
     						本文的版权归作者 <a href="mailto:{{ site.author.email }}">{{ site.author.name }}</a> 所有，采用 <a href="http://creativecommons.org/licenses/by-nc/3.0/">Attribution-NonCommercial 3.0 License</a>。任何人可以进行转载、分享，但不可在未经允许的情况下用于商业用途；转载请注明出处。感谢配合！
   						</p>
-						
+
 						<div class="comment">
 							{% if page.comments %}
 								{% include duoshuo.html %}
@@ -238,7 +238,7 @@
 						</div>
 					</div>
 				{% endif %}
-				
+
         	{% endif %}
       </div>
     </div>
